--- a/Switcharoo/app/src/main/AndroidManifest.xml
+++ b/Switcharoo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.holemancoke.switcharoo" >
+    package="com.example.holemancoke.switcharoo">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".PostItem" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".PostItemActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
